# quick-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
